--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.0",
+    "axios": "^1.9.0",
     "file-saver": "^2.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
