--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-pdf/renderer": "^4.3.0",
     "axios": "^1.9.0",
     "file-saver": "^2.0.5",
+    "firebase": "^11.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
