--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.21.0",
     "@react-pdf/renderer": "^4.3.0",
     "axios": "^1.9.0",
     "file-saver": "^2.0.5",
